--- a/references.bib
+++ b/references.bib
@@ -1,19 +1,19 @@
-@article{Keshav,
-    author = {Keshav, S.},
-    title = {How to Read a Paper},
-    journal = {SIGCOMM Comput. Commun. Rev.},
-    issue_date = {July 2007},
-    volume = {37},
-    number = {3},
-    month = jul,
-    year = {2007},
-    issn = {0146-4833},
-    pages = {83--84},
-    numpages = {2},
-    url = {http://doi.acm.org/10.1145/1273445.1273458},
-    doi = {10.1145/1273445.1273458},
-    acmid = {1273458},
-    publisher = {ACM},
-    address = {New York, NY, USA},
-    keywords = {hints, paper, reading},
+@article{Outlines,
+    author = {Bal\'{a}zs, Hajagos and  L\'{a}szl\'{o}, Sz\'{e}csi and Bal\'{a}zs, Cs\'{e}bfalvi},
+    title = {Fast silhouette and crease edge synthesis with geometry shaders},
+    journal = {},
+    issue_date = {},
+    volume = {},
+    number = {},
+    month = ,
+    year = {},
+    issn = {},
+    pages = {4},
+    numpages = {1},
+    url = {http://cg.iit.bme.hu/~szecsi/cikkek/crease12/crease_hajagos_final.pdf},
+    doi = {},
+    acmid = {},
+    publisher = {Budapest University of Technology and Economics},
+    address = {},
+    keywords = {non-photorealistic rendering, stylistic rendering, outlines},
 } 
