Added correct starter stuff

--- a/report.tex
+++ b/report.tex
@@ -1,9 +1,9 @@
 %FILL THESE IN
-\def\mytitle{Coursework Report}
+\def\mytitle{Draughts in Python}
 \def\mykeywords{Fill, These, In, So, google, can, find, your, report}
-\def\myauthor{Cool Student}
-\def\contact{4008000@napier.ac.uk}
-\def\mymodule{Module Title (SET00000)}
+\def\myauthor{Emma Parsley}
+\def\contact{40206111@live.napier.ac.uk}
+\def\mymodule{Algorithms and Data Structures SET09117}
 %YOU DON'T NEED TO TOUCH ANYTHING BELOW
 \documentclass[10pt, a4paper]{article}
 \usepackage[a4paper,outer=1.5cm,inner=1.5cm,top=1.75cm,bottom=1.5cm]{geometry}
