--- a/references.bib
+++ b/references.bib
@@ -1,19 +1,14 @@
-@article{Keshav,
-    author = {Keshav, S.},
-    title = {How to Read a Paper},
-    journal = {SIGCOMM Comput. Commun. Rev.},
-    issue_date = {July 2007},
-    volume = {37},
-    number = {3},
-    month = jul,
-    year = {2007},
-    issn = {0146-4833},
-    pages = {83--84},
-    numpages = {2},
-    url = {http://doi.acm.org/10.1145/1273445.1273458},
-    doi = {10.1145/1273445.1273458},
-    acmid = {1273458},
-    publisher = {ACM},
-    address = {New York, NY, USA},
-    keywords = {hints, paper, reading},
+@misc{Rules,
+    author = {Wikipedia},
+    title = {English Draughts},
+    howpublished = "\url{https://en.m.wikipedia.org/wiki/English_draughts#Rules}",
+    keywords = {english, draughts, rules},
+} 
+
+
+@misc{Minimax,
+    author = {TicTacTo},
+    title = {MiniMax},
+    howpublished = "\url{http://neverstopbuilding.com/minimax}",
+    keywords = {english, draughts, rules},
 } 
